--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,14 @@ ext {
     springframeworkVersion = '4.3.3.RELEASE'
 }
 
+sourceSets {
+    dbloader
+}
+
+configurations {
+    dbloaderCompile.extendsFrom compile
+}
+
 dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '19.0'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
