--- a/flyway/conf/flyway.conf
+++ b/flyway/conf/flyway.conf
@@ -19,34 +19,17 @@
 # --------
 # Most drivers are included out of the box.
 # * = driver must be downloaded and installed in /drivers manually
-# DB2*              : jdbc:db2://<host>:<port>/<database>
-# Derby             : jdbc:derby:<subsubprotocol:><databaseName><;attribute=value>
 # H2                : jdbc:h2:<file>
-# Hsql              : jdbc:hsqldb:file:<file>
-# Google Cloud SQL* : jdbc:google:mysql://<project-id>:<instance-name>/<database>
-# MariaDB           : jdbc:mariadb://<host>:<port>/<database>?<key1>=<value1>&<key2>=<value2>...
-# MySQL             : jdbc:mysql://<host>:<port>/<database>?<key1>=<value1>&<key2>=<value2>...
-# Oracle*           : jdbc:oracle:thin:@//<host>:<port>/<service>
-# Phoenix*          : jdbc:phoenix:<host>
-# PostgreSQL        : jdbc:postgresql://<host>:<port>/<database>?<key1>=<value1>&<key2>=<value2>...
-# Redshift          : jdbc:postgresql://<host>:<port>/<database>?<key1>=<value1>&<key2>=<value2>...
-# SAP HANA*         : jdbc:sap://<host>:<port>/<database>
-# solidDB*          : jdbc:solid://<host>:<port>?<key1>=<value1>&<key2>=<value2>...
-# SQL Azure*        : jdbc:sqlserver://<servername>.database.windows.net;databaseName=<database>
-# SQL Server        : jdbc:jtds:sqlserver://<host>:<port>/<database>
-# SQLite            : jdbc:sqlite:<database>
-# Sybase ASE        : jdbc:jtds:sybase://<host>:<port>/<database>
-# Vertica*          : jdbc:vertica://<host>:<port>/<database>
-flyway.url =
+flyway.url = jdbc:h2:tcp://localhost:9092/morapatient
 
 # Fully qualified classname of the jdbc driver (autodetected by default based on flyway.url)
 # flyway.driver=
 
 # User to use to connect to the database. Flyway will prompt you to enter it if not specified.
-# flyway.user=
+flyway.user=sa
 
 # Password to use to connect to the database. Flyway will prompt you to enter it if not specified.
-# flyway.password=
+flyway.password=
 
 # Comma-separated list of schemas managed by Flyway. These schema names are case-sensitive.
 # (default: The default schema for the datasource connection)
