--- a/src/main/resources/main.properties
+++ b/src/main/resources/main.properties
@@ -1,3 +1,3 @@
-jdbc.url="jdbc:h2:localhost"
-jdbc.username="asdf"
-jdbc.password="asf"
+jdbc.url=jdbc:h2:tcp://localhost:9092/morapatient
+jdbc.username=sa
+jdbc.password=
