--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'hu.mora'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 apply plugin: 'java'
 
@@ -15,6 +15,7 @@ ext {
 
 sourceSets {
     dbloader
+    main
 }
 
 configurations {
@@ -27,9 +28,22 @@ dependencies {
     compile group: 'com.h2database', name: 'h2', version: '1.4.192'
     compile group: 'org.springframework', name: 'spring-context', version: springframeworkVersion
     compile group: 'org.springframework', name: 'spring-jdbc', version: springframeworkVersion
-
+    compile group: 'org.flywaydb', name: 'flyway-core', version: '4.0.3'
+    compile group: 'org.apache.commons', name: 'commons-compress', version: '1.12'
 
 
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.0-groovy-2.4'
 
 }
+
+
+jar {
+    into("lib") {
+        from configurations.runtime
+    }
+    manifest {
+        attributes "Main-Class": "hu.mora.MoraPatientMain"
+    }
+}
+
+
